# ChampSim

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  PUBLICATIONS_USING_CHAMPSIM.bib  README.md  absolute.options  build_champsim.sh  champsim_config.json  champsim_config_gasp.json  champsim_small_config.json  commit.sh  config.sh  createConfigFiles.sh  downloadSelectedTraces.sh  example_config.txt  executeSPEC.sh  global.options  index.html  launch.json  module.options  mybranch_config.json  mypref_config.json  notes.txt  plot.py  ramulator.yaml  run.sh  runBaseline.sh  run_4core.sh  run_champsim.sh  selectedTraces.txt  settings.json  test_json_out.json  vcpkg.json
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: buildcheck.yml  configurations.yml  dependabot.yml  docs.yml  main.yml  ramulator-buildcheck.yml  ramulator-compile.yml  ramulator-configurations.yml  ramulator-test.yml  test.yml
_build/master/: .buildinfo  genindex.html  objects.inv
assignment-1/: logs.md
branch/: bimodal.bpred  gshare.bpred  hashed_perceptron.bpred  tage_noopt.bpred
branch/Bi-Mode/: Bi-Mode.cc
branch/Jack/: jack.cc
branch/Local_History_Branch_Prediction/: Local_History_Branch_Prediction.cc
branch/transformer/tests/: CMakeLists.txt  README.md  method_test.cc
config/: __init__.py  branch_predictors.config  compile_commands.py  constants_file.py  cxx.py  defaults.py  filewrite.py  instantiation_file.py  l1d_prefetchers.config  l2c_prefetchers.config  legacy.py  llc_prefetchers.config  makefile.py  module_branch.py  module_btb.py  module_pref.py  module_repl.py  modules.py  parse.py  replacement_policies.config  util.py  validate.py
cvp_tracer/: README.md
develop/: .buildinfo  Address-operations.html  Bandwidth.html  Byte-sizes.html  Cache-model.html  Configuration-API.html  Core-model.html  Creating-a-configuration-file.html  Legacy-modules.html  Module-support-library.html  Modules.html  Publications-using-champsim.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/: Doxyfile  README.txt  conf.py  requirements.txt
google-workloads-to-champsim/: README.md  google-workload-to-champsim.cpp
inc/: FixedVector.hh  FixedVectorMath.hh  access_type.h  address.h  bandwidth.h  block.h  btb.h  bytecode_buffer.h  bytecode_module.h  bzlib_stream_tag.h  cache.h  cache_builder.h  cache_bus.h  cache_stats.h  champsim.h  channel.h  chrono.h  circular_buffer.hpp  component.h  config.h  core_builder.h  core_stats.h  deadlock.h  decomp_tags_util.h  defaults.hpp  delay_queue.hpp  dram_controller.h  dram_controller_ramulator.h  dram_interface.h  dram_stats.h  environment.h  event_counter.h  event_listener.h  extent.h  extent_set.h  gzip_stream_tag.h  hawkeye_predictor.h  inf_stream.h  instruction.h  kanata.h  (+25 more)
master/: .buildinfo  Address-operations.html  Bandwidth.html  Byte-sizes.html  Cache-model.html  Configuration-API.html  Core-model.html  Creating-a-configuration-file.html  Legacy-modules.html  Module-support-library.html  Modules.html  Publications-using-champsim.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
prefetcher/: alff.l2c.pref  alff_pref_l1i.l1i_pref  alff_pref_l2c.l2c_pref  alff_pref_llc.llc_pref  ftq0.llc_pref  ip_stride.l2c_pref  kpcp.l2c_pref  kpcp_util.cc  l1d_prefetcher.cc  l1i_prefetcher.cc  l2c_prefetcher.cc  llc_prefetcher.cc  next_line.l1d_pref  next_line.l1i_pref  next_line.l2c_pref  next_line.llc_pref  no.l1d_pref  no.l1i_pref  no.l2c_pref  no.llc_pref  spp_dev.l2c_pref
python/: parallel_test.py  recompiler.py  size_test.py  test_parser.py
ramulator2ext/: CMakeLists.txt
ramulator2ext/src/dram_controller/: CMakeLists.txt
ramulator2ext/src/dram_controller/impl/plugin/: champsim_plugin.cpp  champsim_stats.cpp
replacement/: alff.llc_repl  alff_repl_llc.llc_repl  base_replacement.cc  drrip.llc_repl  fifo.llc_repl  llc_replacement.cc  lru.llc_repl  myrepl.llc_repl  ship.llc_repl  srrip.llc_repl  srrip_remapped.llc_repl
scripts/: build.sh  download_dpc3_traces.sh  dpc3_max_simpoint.txt  multiworkload.cc  run_4core.sh  run_8core.sh  run_champsim.sh
sim_list/: 4core_number.txt  4core_workloads.txt  crc2_list.txt  multiworkload.cc  num_to_workloads.sh
src/: address.cc  bandwidth.cc  base_replacement.cc  block.cc  btb.cc  bytecode_btb.cc  bytecode_buffer.cc  bytecode_module.cc  cache.cc  cache_builder.cc  cache_bus.cc  cache_queues.cc  cache_stats.cc  champsim.cc  channel.cc  chrono.cc  config.cc  core_builder.cc  core_stats.cc  data_literals.cc  dram_controller.cc  dram_controller_ramulator.cc  dram_interface.cc  dram_stats.cc  event_listener.cc  extent.cc  generated_environment.cc  instruction.cc  json_printer.cc  kanata.cc  main.cc  module_defs.cc  modules.cc  ooo_cpu.cc  operable.cc  plain_printer.cc  ptw.cc  ptw_builder.cc  register_allocator.cc  reorder_buffer.cc  (+5 more)
test/: 030-address-ops.cc  031-address-slice.cc  032-address-slice-dynamic.cc  033-address-arithmetic.cc  040-lru-table.cc  040-simple-lru-table.cc  041-bitwise_ops.cc  042-get-span.cc  042-simple-lru-table.cc  043-fwcounter.cc  140-single-dib-lookup.cc  200-rob-scheduling.cc  300-retire-from-rob.cc  401-hit-latency.cc  402-miss-latency.cc  403-read-bandwidth.cc  404-fill-bandwidth.cc  405-fill-eviction.cc  406-mshr-merge.cc  410-queue-collision.cc  411-queue-translation-hit.cc  412-queue-translation-miss.cc  413-hit-under-miss.cc  420-issue-prefetch.cc  421-prefetch-fill-level.cc  422-prefetch-hit.cc  423-prefetcher-activate.cc  424-duplicate-prefetch.cc  431-merge-prefetch.cc  432-prefetch-metadata.cc  442-replacement-interface.cc  451-next-line-behavior.cc  452-ip-stride-behavior.cc  453-berti-behavior.cc  600-ptw-path.cc  601-multiple-inflight-walks.cc  602-asid-isolation.cc  602-walk-latency.cc  603-pte-page-correctness.cc  640-pscl.cc  (+9 more)
tracer/: README.md  champsim_tracer.cpp  clean_tracer.sh  make_tracer.sh  quick_make.sh
unittest/: RunUnitTest.md  UnitTest.cc  unittest
(+849 files in other folders)
